samples/_failures_safe/1761183728_cdc385_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc0028f1.c: In function ‘main’:
./samples/SAFE/__tmp_fc0028f1.c:154:22: error: ‘decomp’ undeclared (first use in this function)
  154 |         buffer_free(&decomp
      |                      ^~~~~~
./samples/SAFE/__tmp_fc0028f1.c:154:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fc0028f1.c:154:28: error: expected ‘)’ at end of input
  154 |         buffer_free(&decomp
      |                    ~       ^
      |                            )
./samples/SAFE/__tmp_fc0028f1.c:154:9: error: expected declaration or statement at end of input
  154 |         buffer_free(&decomp
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_fc0028f1.c:154:9: error: expected declaration or statement at end of input
